# greyctf26-challs-public

quals/: README.md
quals/ai/SABLE/: ORGANIZER_NOTES.md  (+2 more)
quals/web/go_going_goen/src/backend/: pyproject.toml
quals/web/go_going_goen/src/backend/app/: main.py  web.py
quals/web/go_going_goen/src/backend/app/api/: router.py
quals/web/go_going_goen/src/backend/app/api/routes/: admin.py  auth.py  health.py  shared.py
quals/web/go_going_goen/src/backend/app/core/: bootstrap.py  config.py  exceptions.py  team_context.py
quals/web/go_going_goen/src/backend/app/core/sql/: grant_app_role.sql  shared_platform.sql
quals/web/go_going_goen/src/backend/app/db/: dependencies.py  session.py
quals/web/go_going_goen/src/backend/app/models/: auth.py  progress.py
quals/web/go_going_goen/src/backend/app/observability/: http.py  metrics.py
quals/web/go_going_goen/src/backend/app/services/: auth.py  ctfd_token.py  downloads.py  instance.py  progress.py
quals/web/go_going_goen/src/backend/app/stages/stage1/: README.md  constants.py  dependencies.py  models.py  repository.py  router.py  service.py  wordbank.py
quals/web/go_going_goen/src/backend/tests/: test_admin_router.py  test_auth_service.py  test_config.py  test_download_service.py  test_health_router.py  test_metrics.py  test_pinpoint_router.py  test_pinpoint_service.py  test_progress_models.py  test_progress_service.py  test_queens_router.py  test_queens_service.py  test_shared_router.py  test_stage2_exploit_shape.py  test_stage_access_dependencies.py  test_tango_router.py  test_tango_service.py  test_web.py
(+434 files in other folders)
